# SuperBenchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routers.py
app/api/routes/: __init__.py  results.py
app/core/: config.py
app/schemas/: __init__.py  results.py
app/services/: results.py
app/tests/: test_database.json
app/tests/api/: conftest.py  test_results.py
app/tests/services/: test_results.py
app/tests/utils/: test_decorators.py
app/utils/: __init__.py  decorators.py  json_handler.py
